--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="thought" align="center" style="padding: 2rem 0; font-style: italic;">
             "The Future Belongs to those who believe in the beauty of their dreams." -Eleanor Roosevelt
         </div>
-        <div class="end" style="margin: 0 20px">
+        <div class="end" align="center" style="margin: 0 20px">
             <h6>~ Created by- Ramendra Pratap Singh ~</h6>
         </div>
     </div>
