--- a/about-me.html
+++ b/about-me.html
@@ -66,8 +66,8 @@
                     I am Ramendra Pratap Singh. I am currently pursuing   
                     B.Tech, with major in Information Technology.
                      My current aggregate percentage in B.Tech is <span style="color: red;">79.7%</span>
-                    I had my schooling from City Monessori School, Lucknow. 
-                     It was affiliated to ICSE board. I scored <span style="color: red;">91.5%</span> in my
+                    I had my schooling from City Monessori School, Lucknow,
+                     affiliated to ICSE board. I scored <span style="color: red;">91.5%</span> in my
                      12th boards. 
                     I also achieved <span style="color: red;">85.33%</span> in my 10th boards.</div>
                 </div>
