--- a/projects.html
+++ b/projects.html
@@ -56,6 +56,7 @@
     </div>
     
     <!----------------------------navigation end--------------->
+    <h1 align="center">Links are Coming soon...</h1>
 </body>
 
 </html>
