--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             More
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="images/Ramendra Resume.pdf" target="_blank">Resume</a>
+                            <li><a class="dropdown-item" href="images/Ramendra's Resume_0.pdf" target="_blank">Resume</a>
                             </li>
                             <li><a class="dropdown-item" href="certificates.html">Certificates</a></li>
                             <li><a class="dropdown-item" href="projects.html">Projects</a></li>
